# rate-limitter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/scripts/: seed.sql
migrations/: env.py
migrations/versions/: 20260426_1854_initial_schema.py  20260501_1926_rule_unique_nulls_not_distinct.py
src/: requirements.md
src/rate_limiter/: __init__.py  config.py  dependencies.py  logging.py  main.py
src/rate_limiter/algorithms/: _lua.py  base.py  fixed_window.md  fixed_window.py  token_bucket.md  token_bucket.py
src/rate_limiter/api/: health.py
src/rate_limiter/db/: __init__.py  connection.py
src/rate_limiter/lua/: __init__.py  fixed_window.lua  token_bucket.lua
src/rate_limiter/models/: ERD.md  __init__.py  base.py  client.py  rule.py  violation.py
src/rate_limiter/schemas/: __init__.py  health.py
src/rate_limiter/worker/: __init__.py  settings.py
tests/: conftest.py  docker-compose.test.yml
tests/unit/: test_config.py  test_fixed_window.py  test_token_bucket.py
