[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rate-limiter"
version = "0.1.0"
description = "Production-style distributed rate limiter (FastAPI, Redis Lua, Postgres, ARQ, RabbitMQ)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "aio-pika>=9.4.3",
    "arq>=0.26.0",
    "structlog>=24.4.0",
    "PyJWT[crypto]>=2.9.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
load = ["locust>=2.32.0"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "types-redis>=4.6.0",
]

# Src layout: path is src/<import_name>/ so `import rate_limiter` works.
[tool.hatch.build.targets.wheel]
packages = ["src/rate_limiter"]

[tool.hatch.build.targets.sdist]
include = ["src/rate_limiter", "README.md"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "arq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aio_pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "locust.*"
ignore_missing_imports = true
